crates/mineral-tui/src/components/layout/browse/spectrum/snapshots/spectrum_silent_full_width_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/spectrum.rs
description: "频谱无音频(idle baseline,占满宽度无起伏)"
expression: terminal.backend()
---
"╭ spectrum ────────────────────────────────────────────────────────────────────╮"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃│"
"╰──────────────────────────────────────────────────────────────────────────────╯"
