crates/mineral-tui/src/components/layout/browse/spectrum/snapshots/terrain_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/browse/spectrum/state.rs
description: "terrain 山脊地形稳态(最前活层 + 历史层进度上浮,画家算法遮挡)"
expression: terminal.backend()
---
"╭ spectrum ────────────────────────────────────────────────────────────────────╮"
"│ ⣀⠔⡱⣀⡔⠱⣀⡴⠱⣀⡤⠳⣀⡤⠢⣀⡠⢢⣀⣠⢢⣀⣠⢦⡀⣠⢤⡀⣠⢤⡀⣀⢤⡀⣀⢤⡀⣀⣤⡀⢀⡤⠓⣄⡤⠒⣄⡠⠒⣄⡠⠒⣄⣠⠒⡄⣠⠖⡄⣠⠔⡄⣀⠔⡄⣀⠔⡄⣀⡤⡀⢀⡤⡀⢀⡤⡀│"
"│⡩⢊⠔⠹⣋⠔⠱⡋⡔⠱⡋⡰⠱⡋⡠⠳⡋⡠⠢⡓⡡⠢⡓⢡⠢⡛⢁⢦⠛⢁⢄⠫⢃⢄⠫⢊⢄⠯⢊⢄⠯⠋⡔⠑⡌⡠⠓⡌⡠⠒⡜⡡⠒⡕⡡⠒⡝⢡⠒⡝⢁⠖⡽⢃⠔⡽⢊⠔⡽⢊⠔⡽⠋⡔⣽⠏⡰⣽│"
"│⡰⠁⡰⢱⠁⡠⢳⠉⡠⢢⠋⡠⢢⠋⢠⢢⠋⢀⢦⠋⢀⢄⠓⢁⢄⠓⢁⢄⠓⢁⢄⠓⠁⣀⠣⠃⡀⠣⠊⡀⠣⠊⡠⠒⡌⡠⠒⡌⢠⠒⡌⢀⠤⡘⢁⠤⡘⢁⠤⡘⢁⠤⡑⠁⡤⡱⠃⡠⡱⠊⡠⡱⠊⡠⡱⠊⡠⣱│"
"│⡠⠊⡔⠱⡋⡰⠱⡋⡠⠳⡓⡡⢢⠓⡡⢢⠓⢡⢢⠗⢁⢦⠗⢁⢄⠧⢃⢄⠧⢊⢄⠧⢊⢄⠧⠊⣈⢆⠎⣈⢆⠜⡠⠒⡕⡡⠒⡕⡡⠒⡕⢡⠒⡕⢁⠔⡵⢃⠔⡵⢊⠤⡱⢊⠤⡱⠊⡤⣱⠎⡠⣣⠜⡠⣣⠔⡡⣣│"
"│⡠⠊⡠⢢⠋⡠⢢⠋⢠⢢⠋⢀⢦⠓⢁⢄⠓⢁⢄⠓⢁⢄⠓⠁⣄⠓⠁⡀⠧⠃⡀⠧⠊⡀⠧⠊⡀⠧⠊⡀⢇⠎⢀⠦⡉⢀⠤⡑⢁⠤⡑⢁⠤⡑⢁⠤⡑⠁⡤⡱⠃⡠⡱⠊⡠⡱⠊⡠⡱⠊⣀⢱⠎⢀⢱⠜⢀⢣│"
"│⢀⠜⡠⢳⠗⡡⢢⠗⡡⢢⠗⢡⢢⠗⢁⢦⠗⢁⢄⠧⢊⢌⠦⢊⢌⠦⠊⣌⠦⠊⡈⢆⠎⡈⢆⠜⡈⣆⠔⡉⣆⠔⡡⠢⡑⢁⠦⡑⢁⠤⡱⢃⠤⡣⢊⠤⡣⢊⠤⡣⠊⡤⣣⠎⡠⣣⠜⡠⣣⠔⡡⣣⠔⡡⣣⡔⢡⣣│"
"│⢡⠊⢠⢢⠋⢀⢦⠓⢁⢄⠗⢁⢄⠗⢁⢄⠗⠁⣄⠗⠁⡀⠧⠊⡀⠧⠊⡈⠦⠊⡈⠦⠊⠈⢆⠎⠈⢆⠜⠈⢆⠔⢁⠤⡑⢁⠤⡑⢁⠤⡑⠁⣀⠱⠃⣀⠱⠊⣀⠱⠊⣀⠣⠊⣀⢣⠎⢀⢣⠜⢀⢣⠔⢁⢫⠔⢁⢫│"
"│⢁⢔⠕⠹⣖⠕⠹⡖⡕⠹⡦⡣⠻⡦⡪⠪⡦⡪⠪⡦⡪⢪⡦⢪⢪⣆⢎⢮⣆⢜⢌⣆⢔⢍⣆⢔⢕⡄⡔⣕⡄⡰⡱⠑⡧⡣⠓⡧⡪⠒⡧⡪⠒⡧⢪⠒⣧⢎⠖⣧⢜⠔⣧⢔⠕⣧⢔⠕⣧⡔⡕⣇⡰⡡⣇⡠⡣⣏│"
"│⡡⠃  ⠁  ⠋  ⠋  ⠋  ⠋  ⠓⠁ ⠓⠁ ⠓⠁ ⠓⠁ ⠣⠃ ⠣⠊ ⠫⠊ ⠯⠊  ⠈  ⠈  ⠘⠁ ⠘⠁ ⠑⠁ ⠑⠁ ⠑⠁ ⠱⠊ ⠹⠊ ⠹⠊ ⠹⠊ ⢹│"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
